# learn_ros2

./: .gitignore.txt  CMakeLists.txt.back  README.md  requirement.txt  ros2_cpp_node.cpp  ros2_person_node.py  ros2_python_node.py  test.cpp  test.py
CHAPT2/: novel2.txt
CHAPT2/install/: setup.sh
CHAPT2/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node  learn_funcational  learn_lambda  learn_thread  person_node
CHAPT2/install/demo_cpp_pkg/share/demo_cpp_pkg/: local_setup.sh  package.bash  package.sh
CHAPT2/install/demo_python_pkg/lib/demo_python_pkg/: learn_thread  person_node  python_node  writer_node
CHAPT2/install/demo_python_pkg/share/demo_python_pkg/: package.bash  package.ps1  package.sh  package.zsh
CHAPT2/log/: latest_build
CHAPT2/src/demo_cpp_pkg/: CMakeLists.txt
CHAPT2/src/demo_cpp_pkg/src/: learn_shared_ptr.cpp
CHAPT2/src/demo_python_pkg/: setup.py
CHAPT2/src/demo_python_pkg/demo_python_pkg/: ros2_person_node.py
CHAPT3/: novel1.txt
CHAPT3/topic_practice_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
CHAPT3/topic_practice_ws/install/status_interfaces/share/status_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
CHAPT3/topic_practice_ws/install/status_publisher/lib/status_publisher/: sys_status_pub
CHAPT3/topic_practice_ws/install/status_publisher/share/status_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
CHAPT3/topic_practice_ws/log/: latest_build
CHAPT3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt
CHAPT3/topic_practice_ws/src/status_interfaces/msg/: SystemStatus.msg
CHAPT3/topic_practice_ws/src/status_publisher/: setup.py
CHAPT3/topic_ws/install/: local_setup.sh  setup.sh
CHAPT3/topic_ws/install/demo_cpp_topic/lib/demo_cpp_topic/: turtle_circle
CHAPT3/topic_ws/install/demo_cpp_topic/share/demo_cpp_topic/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
CHAPT3/topic_ws/log/: latest_build
CHAPT3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt
CHAPT3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control copy.cpp  turtle_control.cpp
CHAPT3/topic_ws/src/demo_python_topic/: package.xml  setup.py
CHAPT3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_sub_node.py
ros2_ws/install/: local_setup.sh
ros2_ws/install/demo_cpp_pkg/share/demo_cpp_pkg/: package.dsv  package.ps1  package.zsh
ros2_ws/install/demo_python_pkg/share/demo_python_pkg/: package.dsv  package.xml
ros2_ws/src/demo_cpp_pkg/src/: learn_funcational.cpp  learn_lambda.cpp  learn_thread.cpp  person_node.cpp
ros2_ws/src/demo_python_pkg/demo_python_pkg/: ros2_person_node.py
(+33 files in other folders)
